--- a/index.html
+++ b/index.html
@@ -224,9 +224,6 @@
       console.log(typeof startLon)
       console.log("startLat type")
       console.log(typeof startLat)
-      routeCoordinates.forEach((coord, i) => {
-  console.log(`Point ${i}:`, coord, coord.map(x => typeof x));
-});
       const milesPerDegreeLat = 110.574 / 1.60934; // ≈68.73 miles per degree
       const milesPerDegreeLon = (111.320 / 1.60934) * Math.cos(startLat * Math.PI / 180); // ≈69.19*cos(lat)
 
@@ -390,8 +387,8 @@
     // Action after submit button
     submitButton.addEventListener('click', async () => {
       console.log("Submit Button Clicked")
-      const latInput = document.getElementById('startlat').value;
-      const lonInput = document.getElementById('startlon').value;
+      const latInput = Number(document.getElementById('startlat').value);
+      const lonInput = Number(document.getElementById('startlon').value);
       const targetDistance = parseFloat(document.getElementById('distance').value);
       const routeType = document.getElementById('type').value;
       const avoidHighways = document.getElementById('highway').checked;
