--- a/index.html
+++ b/index.html
@@ -253,6 +253,31 @@
       return waypoints;
     }
 
+    function generateLoopWaypointsFixed(startLat, startLon, segmentDistance, numPoints = 3) {
+      const waypoints = [];
+      let prevLat = startLat;
+      let prevLon = startLon;
+
+      for (let i = 0; i < numPoints; i++) {
+        const angle = Math.random() * 2 * Math.PI;
+        const milesPerDegreeLat = 110.574 / 1.60934;
+        const milesPerDegreeLon = (111.320 / 1.60934) * Math.cos(prevLat * Math.PI / 180);
+
+        const deltaLat = (Math.sin(angle) * segmentDistance) / milesPerDegreeLat;
+        const deltaLon = (Math.cos(angle) * segmentDistance) / milesPerDegreeLon;
+
+        const newLat = prevLat + deltaLat;
+        const newLon = prevLon + deltaLon;
+
+        waypoints.push([newLon, newLat]);
+
+        prevLat = newLat;
+        prevLon = newLon;
+      }
+
+      return waypoints;
+    }
+
     // Add debug markers for loop or one-way waypoints
     function addDebugWaypoints(map, waypoints) {
       waypoints.forEach((coord, i) => {
@@ -303,27 +328,28 @@
         let routeCoordinates;
 
         if (routeType === 'loop') {
-          // Generate multi-waypoint loop using current estimated radius
-          const loopWaypoints = generateLoopWaypointsCircle(startLat, startLon, estimatedRadiusMiles, loopPoints);
+          const segmentDistance = targetDistanceMiles / loopPoints;
+          const loopWaypoints = generateLoopWaypointsFixed(startLat, startLon, segmentDistance, loopPoints);
 
-          // Build coordinates: start -> waypoints -> start
+          // Build coordinates for ORS
           routeCoordinates = [
             [Number(startLon), Number(startLat)],
-            ...loopWaypoints.map(p => p.map(Number)),  // ensure numeric
+            ...loopWaypoints.map(p => p.map(Number)),
             [Number(startLon), Number(startLat)]
           ];
-          // Add waypoints to map for debugging
+
+          // Add all waypoints to the map
           addDebugWaypoints(map, routeCoordinates);
         } else {
-          // One-way route: single random point at full distance
           const randomPoint = randomDestination(startLat, startLon, estimatedRadiusMiles);
           routeCoordinates = [
             [Number(startLon), Number(startLat)],
             randomPoint.map(Number)
           ];
-          // Add waypoints to map for debugging
+
           addDebugWaypoints(map, routeCoordinates);
         }
+
 
         // Call OpenRouteService
         const orsResponse = await callORS(routeCoordinates, avoidHighways);
